fix(fileupload): table buttons on mobile

--- a/src/app/components/fileupload/fileupload.style.scss
+++ b/src/app/components/fileupload/fileupload.style.scss
@@ -120,4 +120,8 @@
       left: -5px;
     }
   }
+
+  .files-table td .btn .glyphicon {
+    top: 4px;
+  }
 }
